# SciLean

./: .dir-locals.el  .gitignore  CLAUDE.md  DifferentiationStuff.lean  Icc.lean  Main.lean  Makefile  README.md  README.org  SciLean.lean  Test.lean  importignore  index.html  lake-manifest.json  lakefile.lean  lean-toolchain  leanpkg.toml  main.py  notes.org  pyproject.toml  todo.org
.devcontainer/: Dockerfile  devcontainer.json
C/: blas_bench  blas_bench.c  bytearray.c  floatarray.c  gemm_bench  gemm_bench.c  gemm_gen.h  kernel.c  kernel.h  kmeans.c  levelthree.c  math.c  util.c  util.h
CUDA/: cuda_backend.cu  setup_cloud_gpu.sh
Metal/: kmeans.metal  metal_backend.mm
SciLean/: Algebra.lean  Alternatives.lean  ArgumentProperty.lean  AtomicFun.lean  AutoImpl.lean  Basic.lean  Categories.lean  CheckTCFailure.lean  Core.lean  Data.lean  Doodle.lean  DoodleInvertible.lean  DoodleRevCDeriv.lean  DoodleRevDerivUpdate.lean  Examples.lean  FFI.lean  FunProp.lean  FunPropCore.lean  Functions.lean  IntegralDoodle.lean  Invert.lean  Linear.lean  Mechanics.lean  Meta.lean  Notation.lean  Operators.lean  Prelude.lean  Profile.lean  Quot.lean  Simp.lean  Smooth.lean  Solver.lean  StandaloneIsSmooth.lean  StandaloneSymbolicDifferentiation.lean  Tactic.lean  Tests.lean
Test/: BasicGradient.lean  BasicRevDeriv.lean  Smoke.lean  array_notation.lean  basic_gradients.lean  basic_hasrevfderivM.lean  basic_meta_fun.lean  basic_revDeriv.lean  basic_vec_fwd_fderiv.lean  data_array.lean  (+18 more)
cpp/Eigen/: CMakeLists.txt  CppClass.h  LDLT.cpp  SparseMatrix.cpp  compile_commands.json
(+1680 files in other folders)
